# gtframe

./: .gitignore  pyproject.toml
.superpowers/brainstorm/438-1780230917/content/: layout-options.html  page-structure.html  report-and-case-pages.html  run-test-page.html
.superpowers/brainstorm/438-1780230917/state/: server-stopped
docs/superpowers/plans/: 2026-05-31-gtframe-web-ui-plan.md
docs/superpowers/specs/: 2026-05-31-gtframe-web-ui-design.md
src/gtframe/: cli.py  config.py  exceptions.py
src/gtframe/device/: android_driver.py  base_driver.py  device_pool.py  ios_driver.py
src/gtframe/orchestrator/: context.py  step_executor.py  test_runner.py  yaml_parser.py
src/gtframe/report/: log_collector.py  reporter.py
src/gtframe/vision/: cache.py  engine.py  ocr_engine.py  opencv_matcher.py
src/gtframe/web/: __init__.py  app.py
src/gtframe/web/static/: script.js  style.css
src/gtframe/web/templates/: base.html  cases.html  dashboard.html  devices.html  report_detail.html  reports.html  run.html
tests/integration/: test_full_pipeline.py
tests/unit/: test_android_driver.py  test_base_driver.py  test_config.py  test_device_pool.py  test_exceptions.py  test_ios_driver.py  test_opencv_matcher.py  test_step_executor.py  test_vision_cache.py  test_yaml_parser.py
