[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gtframe"
version = "0.1.0"
description = "Automated game testing framework for casual mobile games"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "opencv-python>=4.8.0",
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    "anthropic>=0.30.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "allure-pytest>=2.13.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "sse-starlette>=1.8.0",
    "httpx>=0.27.0",
]

[project.scripts]
gtframe = "gtframe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gtframe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
